# backend/src/main/java/com/example/wejam/admin/model/AdminActionType.java
@@ -1,0 +1,6 @@
+package com.example.wejam.admin.model;
+
+public enum AdminActionType {
+    VENUE_APPROVED,
+    VENUE_REJECTED
+}
